--- a/TextAdventureTest/it.lproj/Localizable.strings
+++ b/TextAdventureTest/it.lproj/Localizable.strings
@@ -73,8 +73,13 @@ RESPONSE_BOTTLE_TAKE = "Hai preso la bottiglia.";
 RESPONSE_WATER_IN_BOTTLE = "Il liquido nella bottiglia è acqua.";
 RESPONSE_OBJECT_USED = "Hai usato l'oggetto.";
 RESPONSE_OBJECT_REMOVED_FROM_INVENTORY = "L'oggetto è stato rimosso dall'inventario.";
+RESPONSE_START_COMBAT = "COMBATTIMENTO INIZIATO";
 RESPONSE_HIT_ENEMY = "NEMICO COLPITO !!!";
 RESPONSE_MISSED_ENEMY = "NEMICO MANCATO !!!";
+RESPONSE_HIT_PLAYER = "GIOCATORE COLPITO !!!";
+RESPONSE_MISSED_PLAYER = "GIOCATORE MANCATO !!!";
+RESPONSE_FINISHED_COMBACT_WIN = "Combattimento finito. Hai sconfitto la creatura.";
+RESPONSE_FINISHED_COMBACT_LOOSE = "Combattimento finito. Sei stato sconfitto.";
 
 OBJECT_DOOR = "porta";
 OBJECT_SHEET = "foglio";
