--- a/TextAdventureTest/en.lproj/Localizable.strings
+++ b/TextAdventureTest/en.lproj/Localizable.strings
@@ -64,6 +64,8 @@ RESPONSE_DOOR_ALREADY_OPEN = "The door is already open.";
 RESPONSE_DOOR_ALREADY_CLOSED = "The door is already closed.";
 RESPONSE_SHEET_ON_DOOR = "Attaccato alla porta c'è un foglio.";
 RESPONSE_DOOR_KEY_LOCKED = "The door is locked.";
+RESPONSE_DOOR_NOT_OPENABLE = "The door is closed and cannot be opened";
+RESPONSE_DOOR_LOCKED_ROOM1 = "There is no lock and handle.";
 RESPONSE_NAIL_TAKE = "You have take a nail.";
 RESPONSE_NAIL_RUSTY = "The nail is rusty and curved.";
 RESPONSE_SHEET_TAKE = "You have take the sheet.";
