--- a/TextAdventureTest/it.lproj/Localizable.strings
+++ b/TextAdventureTest/it.lproj/Localizable.strings
@@ -64,6 +64,8 @@ RESPONSE_DOOR_ALREADY_OPEN = "La porta è già aperta.";
 RESPONSE_DOOR_ALREADY_CLOSED = "La porta è già chiusa.";
 RESPONSE_SHEET_ON_DOOR = "Attaccato alla porta c'è un foglio.";
 RESPONSE_DOOR_KEY_LOCKED = "La porta è chiusa a chiave.";
+RESPONSE_DOOR_NOT_OPENABLE = "La porta è chiusa e non può essere aperta.";
+RESPONSE_DOOR_LOCKED_ROOM1 = "Non c'è serratura ne maniglia.";
 RESPONSE_NAIL_TAKE = "Hai preso un chiodo.";
 RESPONSE_NAIL_RUSTY = "Il chiodo è arruginito e ricurvo.";
 RESPONSE_SHEET_TAKE = "Hai preso il foglio.";
