--- a/TextAdventureTest/en.lproj/Localizable.strings
+++ b/TextAdventureTest/en.lproj/Localizable.strings
@@ -32,6 +32,7 @@ SETTINGS_OPTIONS_AUDIO_ON = "Enable audio";
 SETTINGS_OPTIONS_AUDIO_OFF = "Disable audio";
 SETTINGS_OPTIONS_STATISTIC = "Statistic";
 SETTINGS_OPTIONS_SELECTOR_DISCARD = "Discard";
+SETTINGS_OPTIONS_SELECTOR_SHOW_MAP = "Show map";
 
 GENDER_MALE = "Man";
 GENDER_FEMALE = "Woman";
