--- a/TextAdventureTest/it.lproj/Localizable.strings
+++ b/TextAdventureTest/it.lproj/Localizable.strings
@@ -32,6 +32,7 @@ SETTINGS_OPTIONS_AUDIO_ON = "Attiva audio";
 SETTINGS_OPTIONS_AUDIO_OFF = "Disattiva audio";
 SETTINGS_OPTIONS_STATISTIC = "Statistiche";
 SETTINGS_OPTIONS_SELECTOR_DISCARD = "Annulla";
+SETTINGS_OPTIONS_SELECTOR_SHOW_MAP = "Mostra mappa";
 
 GENDER_MALE = "Uomo";
 GENDER_FEMALE = "Donna";
