--- a/TextAdventureTest/en.lproj/Localizable.strings
+++ b/TextAdventureTest/en.lproj/Localizable.strings
@@ -102,3 +102,6 @@ ALERT_ERROR_TITLE = "FATAL ERROR";
 ALERT_ERROR_GENERIC_MESSAGE = "An error was occurred. Unable to continue.";
 
 MAP_ROOM_NO_NAME = "No name !!!";
+
+AUDIO_LOAD_ERROR = "Unable to load audio file !!!";
+AUDIO_MANAGER_UNAVAILABLE = "Audio manager unavailable !!!";
